Fix auth in swagger
